added to login.js, main.handlebars, login.handlebars

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,26 +1,21 @@
-{{!-- <!-- Loop over each object in the projects array -->
-{{#each projects as |project| }}
-<div class="row mb-4 project">
+<!-- Loop over each object in the projects array -->
+{{#each Blogpost as |Blogpost| }}
+<div class="row mb-4 Blogpost">
   <div class="col-md-5">
     <h2>
-      <!-- Call helper function with triple brackets to render the emoji span as HTML -->
-      {{{get_emoji}}}
-      <a href="/project/{{project.id}}">{{project.name}}</a>
+      <a href="/homepage/{{Blogpost.id}}">{{Blogpost.username}}</a>
     </h2>
     <p>
-      <span for="img" aria-label="money">💲</span>
-      <!-- Pass needed_funding value to the helper function -->
-      <span class="dollar-amount">{{format_amount project.needed_funding}}</span>
-      needed!
+      <span class="Blogpost-contents">{{Blogpost.contents}}</span>
+      
     </p>
-    <p>Created by {{project.user.name}} on {{format_date project.date_created}}</p>
+    <p>Created by {{Blogpost.user.username}} on {{format_date Blogpost.date_created}}</p>
   </div>
   <div class="col-md-7">
     <p>
-      {{project.description}}
+      {{Blogpost.contents}}
     </p>
   </div>
 </div>
-{{/each}} --}}
+{{/each}}
 {{log this}}
-<h1>Hello World!</h1>
