--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,7 +3,7 @@
     <h2 class="page-title">Login</h2>
     <form class="form login-form">
       <div class="form-group">
-        <label for="email-login">Username:</label>
+        <label for="username-login">Username:</label>
         <input class="form-input" type="text" id="username-login" />
       </div>
       <div class="form-group">
