--- a/views/Blogpost.handlebars
+++ b/views/Blogpost.handlebars
@@ -38,7 +38,7 @@
     {{#each Blogpost as |Blogpost|}}
     <div class="row mb-2">
       <div class="col-md-8">
-        <h4><a href="/Blogpost/{{Blogpost.id}}">{{Blogpost.posttitle}}</a></h4>
+        <h4><a href="/Dashboard/{{Blogpost.id}}">{{Blogpost.posttitle}}</a></h4>
       </div>
       <div class="col-md-4">
         <button class="btn btn-sm btn-danger" data-id="{{Blogpost.id}}">DELETE</button>
