--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,4 @@
-<!-- Loop over each object in the projects array -->
+<!-- Loop over each object in the blogpost array -->
 {{#each Blogpost as |Blogpost| }}
 <div class="row mb-4 Blogpost">
   <div class="col-md-5">
