--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -17,5 +17,8 @@
     </p>
   </div>
 </div>
+<div class="row mb-4 post">
+  <a class="btn btn-primary" href="/Blogpost/:id" role="button">Comment</a>
+</div>
 {{/each}}
 {{log this}}
