--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,11 +19,10 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
                 <a class="nav-item nav-link active" href="/">Home <span class="sr-only"></span></a>
-                <a class="nav-item nav-link active" href="/">Dashboard <span class="sr-only"></span></a>
+                <a class="nav-item nav-link active" href="/dashboard">Dashboard <span class="sr-only"></span></a>
                 <!-- Conditionally render login or logout links -->
                 {{#if logged_in}}
-                <a href="/dashboard">Dashboard</a> |
-                <button class="no-button" id="logout">Logout</button>
+                <a class="nav-link" href = "/" id="logout">Logout</a>
                 {{else}}
                 <a href="/login">Login</a>
                 {{/if}}
