--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -9,7 +9,7 @@
     {{#each Blogposts as |Blogpost|}}
     <div class="row mb-2">
       <div class="col-md-8">
-        <h4><a href="/dashboard/{{Blogpost.id}}">{{Blogpost.posttitle}}</a></h4>
+        <h4><a href="/Blogpost/{{Blogpost.id}}">{{Blogpost.posttitle}}</a></h4>
       </div>
       <div class="col-md-4">
         <button class="btn btn-sm btn-danger" data-id="{{Blogpost.id}}">DELETE</button>
